tdf#91602: sw: prevent recursive layout crash

SwCrsrShell::UpdateCrsr() calls SwTextFrm::GetCharRect(), which does
layout.  It happens that a SdrObject is moved around during layout,
which calls SwDrawContact::Changed(), which believes that there is
no layout active because there is no SwLayAction and
ViewShell::EndAction() has already been called, so we get recursive
layout-in-layout action.

(cherry picked from commit 587006cac508616f486aea45e265a170bcccdc87)

tdf#91917 tdf#91602: avoid layout recursion differently

(regression from 587006cac508616f486aea45e265a170bcccdc87)

(cherry picked from commit 238e07ddca879e0951bef6391fdc5c3fc26bded5)

Change-Id: I38e00a7469243088e25aa1a91e3581240b3bbdea